k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssp-service
  labels:
    app: ssp
spec:
  selector:
    app: ssp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
